Correction suggérées par Sonar